syntax = "proto3";
option go_package = "./pb";
package pb;

message userReq {
  int64 id = 1;
}
message userRes {
  int64 id = 1;
  string name = 2;
}
service user {
  rpc GetUser(userReq) returns (userRes);
}